--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
+  <a href="https://www.youtube.com/watch?v=_vZ7x_nFSl0" target="_blank">Youtube Link</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
+  <a href= "about.html" target="_blank">About Page</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="_blank" alt="a lion">Lion</a>
 
 </body>
 </html>
